@startuml
'https://plantuml.com/sequence-diagram


class CommandUi {
    - LINE: String
    - DATE_TIME_FORMATTER: DateTimeFormatter
    + printWelcomeMessage(): void
    + printMealLogMessage(mealTask: MealTask): void
    + printExerciseLogMessage(logExercise: LogExercise): void
    + printShowCalMessage(): void
    + printWaterLogMessage(newWaterTask: WaterTask): void
    + printWaterIntakeMessage(totalWaterIntake: int, waterGoal: int): void
    + printMatchingTasks(word: String): void
    + printTaskDeletedMessage(deletedTask: Task): void
    + printFoodItemNotFoundMessage(description: String): void
    + printExerciseItemNotFoundMessage(exerciseName: String): void
    + printAddFoodItemMessage(description: String): void
    + printAddExerciseMessage(exerciseName: String): void
    + promptLogExerciseMessage(exerciseName: String): void
    + promptLogFoodMessage(foodItemName: String): void
}

class LogMeal {
    - servings: int
    - foodName: String
    - mealCalories: int
    + getServings(): int
    + getFoodName(): String
    + getMealCalories(): int
}

class LogExercise {
    - duration: int
    - exerciseName: String
    - caloriesBurnt: int
    + getDuration(): int
    + getExerciseName(): String
    + getCaloriesBurnt(): int
}

class LogWater {
    - quantity: int
    + getQuantity(): int
}

class Log {
    - description: String
    + getDescription(): String
}

CommandUi --> LogMeal : uses
CommandUi --> LogExercise : uses
CommandUi --> LogWater : uses
CommandUi --> Log : uses



@enduml